force-app/main/default/objects/kfsell__KF_Sell_Best__c/kfsell__KF_Sell_Best__c.object-meta.xml
<CustomObject>
    <label>KF Sell Best Action</label>
    <nameField>
        <displayFormat>KFBA - {0000}</displayFormat>
        <label>KF Sell Best Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KF Sell Best Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>