force-app/main/default/objects/kfsell__KF_Sell_Best__c/fields/kfsell__Action_Title_Seller__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Action_Title_Seller__c</fullName>
    <label>Action Title Seller</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>