force-app/main/default/objects/kfsell__KF_Sell_Best__c/fields/kfsell__Activity_Title__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Activity_Title__c</fullName>
    <label>Activity Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>