force-app/main/default/objects/kfsell__KF_Sell_Best__c/fields/kfsell__Manager_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Manager_URL_Link__c</fullName>
    <label>Manager URL Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>