force-app/main/default/objects/kfsell__KF_Sell_Best__c/fields/kfsell__Task_Name_Url__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Task_Name_Url__c</fullName>
    <formula>IF(ISBLANK(kfsell__Green_Sheet__r.kfsell__Task_Name__c), &apos;-&apos;,
HYPERLINK( &apos;/lightning/r/Green_Sheet__c/&apos; + kfsell__Green_Sheet__r.Id + &apos;/view/&apos; ,
kfsell__Green_Sheet__r.kfsell__Task_Name__c , &apos;_self&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task</label>
    <type>Text</type>
</CustomField>